--- a/index.html
+++ b/index.html
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Pokedex</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="pokedex">Pokedex</h1>
     <div class="poke-container">
-        <div class="pokemon" style="background-color: aquamarine;">
-            <div class="img">
-                <img src="https://archives.bulbagarden.net/media/upload/2/21/001Bulbasaur.png" alt="">
-            </div>
-            <div class="info">
-                <span class="id">#001</span>
-                <h3 class="name">Balbasaur</h3>
-                <small class="type">Type: <span>Grass</span></small>
-            </div>
+      <div class="pokemon" style="background-color: aquamarine">
+        <div class="img">
+          <img
+            src="https://archives.bulbagarden.net/media/upload/2/21/001Bulbasaur.png"
+            alt=""
+          />
         </div>
-        <div class="pokemon" style="background-color: aquamarine;">
-            <div class="img">
-                <img src="https://archives.bulbagarden.net/media/upload/2/21/001Bulbasaur.png" alt="">
-            </div>
-            <div class="info">
-                <span class="id">#001</span>
-                <h3 class="name">Balbasaur</h3>
-                <small class="type">Type: <span>Grass</span></small>
-            </div>
+        <div class="info">
+          <span class="id">#001</span>
+          <h3 class="name">Balbasaur</h3>
+          <small class="type">Type: <span>Grass</span></small>
         </div>
-        <div class="pokemon" style="background-color: aquamarine;">
-            <div class="img">
-                <img src="https://archives.bulbagarden.net/media/upload/2/21/001Bulbasaur.png" alt="">
-            </div>
-            <div class="info">
-                <span class="id">#001</span>
-                <h3 class="name">Balbasaur</h3>
-                <small class="type">Type: <span>Grass</span></small>
-            </div>
-        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
