--- a/index.html
+++ b/index.html
@@ -9,21 +9,7 @@
   </head>
   <body>
     <h1 class="pokedex">Pokedex</h1>
-    <div class="poke-container">
-      <div class="pokemon" style="background-color: aquamarine">
-        <div class="img">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/2/21/001Bulbasaur.png"
-            alt=""
-          />
-        </div>
-        <div class="info">
-          <span class="id">#001</span>
-          <h3 class="name">Balbasaur</h3>
-          <small class="type">Type: <span>Grass</span></small>
-        </div>
-      </div>
-    </div>
+    <div class="poke-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
